--- a/.editorconfig
+++ b/.editorconfig
@@ -5,11 +5,11 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-indent_style = space
+indent_style = tab
 indent_size = 4
 
 [*.{c,h}]
-indent_size = 2
+indent_size = 4
 
 [*.S]
 indent_size = 8
